# Hyperion

./: .coderabbit  .env  .env.template  .env.template.yaml  .env.test  .env.test.yaml  .flake8  .gitguardian.yaml  .gitignore  .python-version  Dockerfile  Dockerfile.base  LICENSE.md  README.md  SECURITY.md  alembic.ini  annuaire.sql  compose.dev.yaml  compose.yaml  config.template.yaml  docker-compose-dev.yaml  docker-compose.yaml  gunicorn.conf.py  gunicorn_conf.py  init.py  prestart.py  prestart.sh  pyproject.toml  requirements-common.txt  requirements-dev.txt  requirements-prod.txt  requirements.txt  requirements_dev.txt  result.txt  sql_app.db  start.sh  test_script.py  tests_script.py  worker.sh
.github/: ISSUE_TEMPLATE.md  PULL_REQUEST_TEMPLATE.md  codecov.yml  dependabot.yml
.github/workflows/: alpha-publish.yml  codeql.yml  lint.yml  lintandformat.yml  lintandtest.yml  pr-dependencies.yml  pr-dependency.yml  preprod-publish.yml  publish.yml  publishbase.yml  test.yml
app/: api.py  app.py  crud.py  database.py  dependencies.py  main.py  models.py  module.py  schemas.py  test_main.py  worker.py
app/core/: config.py  core_module_list.py  coredata_core.py  cruds_core.py  endpoints_core.py  factory_core.py  log.py  models_core.py  module.py  schemas_core.py  security.py  settings.py  tags.py
app/cruds/: cruds_advert.py  cruds_amap.py  cruds_auth.py  cruds_bdebooking  cruds_bdebooking.py  cruds_booking.py  cruds_calendar.py  cruds_campaign.py  cruds_cinema.py  cruds_core.py  cruds_elocaps.py  cruds_external_account.py  cruds_flappybird.py  cruds_grocery.py  cruds_groups.py  cruds_loan.py  cruds_loans.py  cruds_mapper.py  cruds_module_visibility.py  cruds_music.py  cruds_notification.py  cruds_phonebook.py  cruds_raffle.py  cruds_raid.py  cruds_threads.py  cruds_todos.py  cruds_tricount.py  cruds_users.py
app/endpoints/: account.py  admin.py  advert.py  amap.py  associations.py  auth.py  bdebooking.py  bdecalendar.py  booking.py  calendar.py  campaign.py  cinema.py  core.py  elocaps.py  external_account.py  family.py  flappybird.py  grocery.py  groups.py  loan.py  loans.py  mapper.py  module_visibility.py  notification.py  phonebook.py  raffle.py  raid.py  sso.py  threads.py  todos.py  tricount.py  users.py
app/models/: README.md  models_advert.py  models_amap.py  models_auth.py  models_bdebooking.py  models_booking.py  models_calendar.py  models_campaign.py  models_cinema.py  models_core.py  models_elocaps.py  models_grocery.py  models_loan.py  models_mapper.py  models_module_visibility.py  models_music.py  models_notification.py  models_phonebook.py  models_raffle.py  models_raid.py  models_thread.py  models_todos.py  models_tricount.py  models_users.py  phonebook_models.py
app/routers/: associations.py  users.py
app/schemas/: schemas_advert.py  schemas_amap.py  schemas_auth.py  schemas_bdebooking.py  schemas_booking.py  schemas_calendar.py  schemas_campaign.py  schemas_cinema.py  schemas_core.py  schemas_elocaps.py  schemas_flappybird.py  schemas_grocery.py  schemas_loan.py  schemas_loans.py  schemas_mapper.py  schemas_module_visibility.py  schemas_notification.py  schemas_phonebook.py  schemas_raffle.py  schemas_raid.py  schemas_threads.py  schemas_todos.py  schemas_tokens.py  schemas_tricount.py  schemas_users.py
app/types/: content_type.py  core_data.py  exceptions.py  factory.py  floors_type.py  membership.py  module.py  module_user_deleter.py  s3_access.py  scheduler.py  scopes_type.py  sqlalchemy.py  standard_responses.py  transactional_async_session.py  websocket.py
app/utils/: factory.py  initialization.py  mailworker.py  redis.py  state.py  tools.py  validators.py
assets/: default.csv  myeclpay-terms-of-service.txt  mypayment-terms-of-service.txt  privacy.txt  security.txt  support.txt  terms-and-conditions.txt
assets/style/: connexion.css
assets/templates/: README.md  account_exists_mail.html  activate_myeclpay_device_mail.html  activation.html  activation_mail.html  base_mail.html  connexion.html  custom_mail_template.html  error.html  generate.py  loan_end_mail.html  main.html  migration_mail.html  migration_mail_already_used.html  myeclpay_signed_tos_mail.html  mypayment_invoice.html  output.css  package-lock.json  package.json  raid_inscription_recap.html  raid_security_file.html  reset_mail.html  reset_mail_does_not_exist.html  structure_manager_transfert.html  style.css  tailwind.config.js  template.html  template_tester.py
docs/modules/: campaign.md
env/: pyvenv.cfg
env/Scripts/: Activate.ps1  activate  activate.bat
migrations/: README  README.md  env.py  script.py.mako
migrations/versions/: 0-6-init.py  0-init.py  1-booking_enhancements.py  10-CoreData.py  10-add-flappybird.py  10-fix_phonebook.py  10-ph.py  10-raid-temporary-validation.py  11-Remove_bookingadmin_topic.py  11-raid-adding-parent_authorization.py  11-raid-security-file.py  12-Flappybird.py  12-add-flappybird.py  12-ph.py  13-payment.py  13-ph.py  14-Payment.py  14-Payments.py  14-fix_phonebook.py  14-fix_uuid_type.py  14-reception_route.py  14_reception_route.py  15-Flappybird2.py  15-payment_secret.py  15-raid.py  15-raid_registering.py  15-reception_route.py  15_reception_route.py  16-Payment.py  16-fix_phonebook.py  16-raid-drive-file.py  (+193 more)
requirements/: common.txt  dev.txt  prod.txt
templates/: activation.html  connexion.html  oidc-connexion.html
tests/: .env.test  commons.py  config.test.yaml  conftest.py  template_tester.py  test_0commons.py  test_PH.py  test_advert.py  test_amap.py  test_associations.py  test_auth.py  test_bdebooking.py  test_booking.py  test_calendar.py  test_campaign.py  test_cdr.py  test_cdr_result.py  test_checkout.py  test_chrono_raid.py  test_cinema.py  test_cmm.py  test_contact.py  test_contacts_safety_cards.py  test_core.py  test_dependencies.py  test_elocaps.py  test_external_account.py  test_factories.py  test_flappybird.py  test_greencode.py  test_groups.py  test_loan.py  test_main.py  test_memberships.py  test_meme.py  test_migrations.py  test_myeclpay.py  test_mypayment.py  test_notification.py  test_payment.py  (+18 more)
(+469 files in other folders)
