[project]
name = "hyperion"
description = "Back-end of MyECL, the app of the students of École Centrale de Lyon, made by ÉCLAIR"
readme = "README.md"
authors = [{ name = "AEECL ECLAIR" }]

# Hyperion follows Semantic Versioning
# https://semver.org/
version = "5.0.2"
requires-python = ">= 3.12, < 3.15"

license = "MIT"
license-files = [
    "LICENSE",
    "assets/privacy.txt",
    "assets/terms-and-conditions.txt",
    "assets/mypayment-terms-of-service.txt",
]

dependencies = [
    "aiofiles==24.1.0",                  # Asynchronous file manipulation
    "alembic==1.13.2",                   # Database migrations
    "arq==0.26.3",                       # Scheduler
    "asyncpg==0.31.0",                   # PostgreSQL adapter for *asynchronous* operations
    "authlib==1.6.5",
    "bcrypt==4.1.3",                     # Password hashing
    "boto3==1.38.23",
    "broadcaster==0.3.1",                # Working with websockets with multiple workers
    "calypsso==2.7.0",
    "faker==37.1.0",
    "fastapi[standard]==0.122.0",
    "firebase-admin==7.1.0",             # For push notification
    "google-api-python-client==2.187.0",
    "google-auth-oauthlib==1.2.1",
    "helloasso-python==1.0.5",
    "httpx==0.28.1",
    "icalendar==5.0.13",
    "jellyfish==1.2.1",                  # String Matching
    "jinja2==3.1.6",                     # Template engine for HTML files
    "phonenumbers==8.13.43",             # For phone number validation
    "psutil==7.0.0",                     # To determine the number of Hyperion workers
    "psycopg[binary]==3.2.13",           # PostgreSQL adapter for *synchronous* operations at startup (database initializations & migrations)
    "pydantic==2.12.5",
    "pydantic-extra-types==2.10.5",
    "pydantic-settings==2.3.4",
    "pyjwt[crypto]==2.10.1",             # Generate and verify the JWT tokens. Imported as `jwt`
    "pymupdf==1.26.6",                   # PDF processing. Imported as `fitz`
    "pypdf==6.4.0",
    "python-multipart==0.0.18",          # A form data parser, as OAuth2 flow requires form-data parameters
    "redis==5.0.8",
    "requests==2.32.4",
    "sqlalchemy-utils==0.41.2",
    "sqlalchemy[asyncio]==2.0.44",       # [asyncio] allows greenlet to be installed on Apple M1 devices
    "unidecode==1.3.8",
    "uvicorn[standard]==0.30.6",
    "xlsxwriter==3.2.0",
]

[project.optional-dependencies]
weasyprint = [
    "weasyprint==65.1",                  # HTML to PDF converter
]

[dependency-groups]
dev = [
    "aiosqlite==0.20.0",
    "boto3-stubs[essential]==1.38.23",
    "google-auth-stubs==0.3.0",
    "mypy[faster-cache]==1.16.0",
    "pytest==9.0.1",
    "pytest-alembic==0.12.1",
    "pytest-asyncio==1.3.0",
    "pytest-cov==6.1.1",
    "pytest-mock==3.14.1",
    "ruff==0.11.8",
    "types-aiofiles==24.1.0.20250516",
    "types-authlib==1.5.0.20250516",
    "types-fpdf2==2.8.3.20250516",
    "types-psutil==7.0.0.20250601",
    "types-redis==4.6.0.20241004",
    "types-requests==2.32.0.20250515",
]

[tool.titan]
minimal-titan-version-code = 158

[tool.ruff]
# By default ruff also respect gitignore files
# Same as Black.
line-length = 88
indent-width = 4
target-version = "py314"

[tool.ruff.lint]
select = [
    "FAST",
    "YTT",
    "ASYNC",
    "S",
    "B",
    "A",
    "COM",
    "C4",
    "DTZ",
    "FA",
    "INT",
    "ISC",
    "ICN",
    "LOG",
    "G",
    "INP",
    "PIE",
    "T20",
    "PYI",
    "PT",
    "RET",
    "Q",
    "SLF",
    "SIM",
    "SLOT",
    "TID",
    "TC",
    "PTH",
    "FLY",
    "I",
    "C90",
    "PERF",
    "E",
    "W",
    "F",
    "PGH",
    "PL",
    "UP",
    "FURB",
    "RUF",
    "TRY",
    "TC",
]
# We may want to enable "ERA" to found commented-out code
ignore = [
    "FAST002", # We don't use annotated dependencies
    "E203",
    "E266",
    "E501",
    "F403",
    "S104",
    "B008",
    "C401",
    "ISC001",
    "SIM102",
    "SIM105",
    "RUF012",  # We may want to enable "Mutable class attributes should be annotated with `typing.ClassVar`"
    "PLR0911", # "Too many return statements"
    "PLR0912", # "Too many branches"
    "PLR0913", # "Too many arguments in function definition"
    "PLR0915", # "Too many statements"
    "PLR2004", # "Magic value used in comparison"
    "G004",    # "Logging statement uses f-string"
]

# Allow fix for all enabled rules (when `--fix`) is provided.
fixable = ["ALL"]
unfixable = []

[tool.ruff.lint.per-file-ignores]
# Allow `assert` and hardcoded passwords for tests.
# Ignore PLW0603 to be able to define global models from init fixture 
"tests/*" = ["S101", "S105", "S106", "ASYNC230", "PLW0603"]
# Allow endpoints, tools and dependencies to raise `HTTPException` after catching an excetion without reraising (`from err`)
"**/endpoints_*" = ["B904"]
"**/cruds_*" = ["B904"]         # TODO: find a better way to handle cruds errors
"app/utils/tools.py" = ["B904"]
# Ignore PLW0603 to be able to modify global variables in dependencies
"app/dependencies.py" = ["B904", "PLW0603"]
# Migrations folder should not really be part of a Python package
"migrations/env.py" = ["INP001"]
# Allow raw SQL for migrations, allow assert for migration tests
"migrations/versions/*" = ["S608", "S101"]
# Allow complexe methods for auth endpoints
"app/core/auth/endpoints_auth.py" = ["C901"]

[tool.ruff.lint.mccabe]
# Flag errors (`C901`) whenever the complexity level exceeds 18.
max-complexity = 18

[tool.ruff.format]
# Like Black, use double quotes for strings.
quote-style = "double"
# Like Black, indent with spaces, rather than tabs.
indent-style = "space"
# Like Black, respect magic trailing commas.
skip-magic-trailing-comma = false
# Like Black, automatically detect the appropriate line ending.
line-ending = "auto"

[tool.mypy]
python_version = "3.14"
plugins = ["pydantic.mypy"]

warn_unreachable = true
warn_unused_configs = true
warn_redundant_casts = true
warn_unused_ignores = true
strict_equality = true
check_untyped_defs = true
disallow_subclassing_any = true
disallow_untyped_decorators = true
no_implicit_reexport = true
warn_return_any = true
explicit_package_bases = true
warn_no_return = true
strict = true

# We currently don't type the return type of endpoints so we can not enable the two following rules
disallow_incomplete_defs = false
disallow_untyped_defs = false
disallow_any_generics = false
disallow_untyped_calls = false


[[tool.mypy.overrides]]
# google_auth_oauthlib : https://github.com/googleapis/google-auth-library-python-oauthlib/issues/288
# googleapiclient : https://github.com/googleapis/google-api-python-client/issues/2426
module = [
    "firebase_admin",
    "icalendar",
    "fitz",
    "google_auth_oauthlib.flow",
    "googleapiclient.*",
    "sqlalchemy_utils",
    "weasyprint",
    "xlsxwriter",
]
ignore_missing_imports = true


[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "module"
asyncio_default_test_loop_scope = "module"
filterwarnings = [
    "error",
    "ignore::DeprecationWarning",
]
    


[tool.coverage.run]
source_pkgs = ["app"]
omit = [
    "main.py",       # Main is just a wrapper and is not used during tests
    "mailworker.py", # We don't use send mails during tests
    "*matrix*",      # We don't send logs to matrix during tests
]
concurrency = [
    "thread",
    "greenlet",
] # Tell the tool that we also use greenlet, because sqlalchemy does


[tool.coverage.report]
# Regexes for lines to exclude from consideration
# See https://coverage.readthedocs.io/en/latest/excluding.html#excluding for more info
exclude_also = []

skip_covered = true
show_missing = true

